Migrate to Next.js 15 and update Nextra config
Upgraded Next.js and Nextra dependencies to latest versions, migrated configuration from next.config.js (CommonJS) to next.config.mjs (ESM), and updated theme config to use .jsx. Converted _meta.json files to _meta.js for dynamic imports, added new MDX components, and updated client directives in components. Also updated styles and removed/added relevant files to align with new Next.js and Nextra requirements.

--- a/pages/_instructor-materials/samples.mdx
+++ b/pages/_instructor-materials/samples.mdx
@@ -2,7 +2,7 @@
 
 ## Multiple choice demo
 
-import MultipleChoice from "components/MultipleChoice";
+import MultipleChoice from "../../components/MultipleChoice";
 
 <MultipleChoice question="" choices={["", "", "", ""]} answer="4" />
 
@@ -22,7 +22,7 @@ export default function Page() {
 
 ## Sandpack demo
 
-import Sandbox from "components/Sandbox";
+import Sandbox from "../../components/Sandbox";
 import { files } from "./samples-demo.js";
 
 <Sandbox template="react" files={files} />
