--- a/pages/guides-and-references/course-info.mdx
+++ b/pages/guides-and-references/course-info.mdx
@@ -138,7 +138,7 @@ I would like to share the guiding principles that form the foundation of this co
 
 6. **Instructor support:** Though there is a significant focus on self-guided learning and exploration, remember that you're not alone. I am here to support, guide, and assist you throughout this journey. Let's learn, grow, and code together!
 
-import MultipleChoice from "components/MultipleChoice";
+import MultipleChoice from "../../components/MultipleChoice";
 
 ## 📚 Knowledge Check
 
