--- a/pages/week-10/firestore.mdx
+++ b/pages/week-10/firestore.mdx
@@ -1,5 +1,5 @@
 import { Callout, Steps, FileTree } from "nextra-theme-docs";
-import MultipleChoice from "components/MultipleChoice";
+import MultipleChoice from "../../components/MultipleChoice";
 
 # Cloud Firestore
 
