--- a/pages/week-2/react.mdx
+++ b/pages/week-2/react.mdx
@@ -238,7 +238,7 @@ import { Callout } from "nextra-theme-docs";
 
 ## 📚 Knowledge Check
 
-import MultipleChoice from "/components/MultipleChoice";
+import MultipleChoice from "../../components/MultipleChoice";
 
 <MultipleChoice
   question="1. What does the 'npm install' command do?"
@@ -312,7 +312,7 @@ function welcomeMessage() {
 
 The code below contains exactly 3 errors. Find and fix the errors so that the code runs without any errors. The error messages displayed are quite cryptic, so try to rely on your own knowledge of React to find the errors.
 
-import Sandbox from "components/Sandbox";
+import Sandbox from "../../components/Sandbox";
 import { files, filesSolution } from "./activity.js";
 
 <Sandbox files={files} />
