--- a/pages/week-3/components-and-props.mdx
+++ b/pages/week-3/components-and-props.mdx
@@ -322,7 +322,7 @@ In the revised `Greeting` component, we're using JavaScript's destructuring assi
 
 Let's consider a scenario where we have a `Profile` component and this profile consists of a `Photo` component and a `ProfileInfo` component.
 
-import Sandbox from "components/Sandbox";
+import Sandbox from "../../components/Sandbox";
 import { example } from "./example.js";
 
 <Sandbox files={example} />
@@ -339,7 +339,7 @@ In this example, the Page component renders a `Profile` component and passes `na
 
 ## 📚 Knowledge Check
 
-import MultipleChoice from "components/MultipleChoice";
+import MultipleChoice from "../../components/MultipleChoice";
 
 <MultipleChoice
   question="1. Which JavaScript concept allows developers to unpack values from objects into distinct variables?"
