--- a/pages/week-7/state.mdx
+++ b/pages/week-7/state.mdx
@@ -1,6 +1,6 @@
 import { Callout, Steps } from "nextra-theme-docs";
-import MultipleChoice from "components/MultipleChoice";
-import Sandbox from "components/Sandbox";
+import MultipleChoice from "../../components/MultipleChoice";
+import Sandbox from "../../components/Sandbox";
 
 # Managing State
 
