--- a/pages/week-9/firebase-auth.mdx
+++ b/pages/week-9/firebase-auth.mdx
@@ -1,5 +1,5 @@
 import { Callout, Steps } from "nextra-theme-docs";
-import MultipleChoice from "components/MultipleChoice";
+import MultipleChoice from "../../components/MultipleChoice";
 
 # Firebase Authentication
 
